# ATMega328p_emulator

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.h  debug.h  debug_utils.h  hardware.h  io_regs.h  memory.h
src/: cpu.cpp  debug_utils.cpp  main.cpp  memory.cpp
tests/: add_flag_tests.asm  basic_c_test.c  blink.c  blink_pinb.c  blink_portb.c  rjmp_test.asm  stack_test.asm  test_ldi.asm  test_ldi.hex
